--- a/HTML/index.html
+++ b/HTML/index.html
@@ -351,7 +351,7 @@
         <div class="contact">
             <h4>Contact Us:</h4>
             <div class="d-flex flex-column">
-                <p>Ishardeep Singh, +91 8629826463 </p>
+                <p><a href="mailto:singhishardeep06@gmail.com">Ishardeep Singh</a>, +91 8629826463 </p>
                 <p>Kavish Singla, +91 98729 06423 </p>
                 <p>Jayant Garg, +91 77194 11066 </p>
             </div>
